--- a/_consumer/src/index.html
+++ b/_consumer/src/index.html
@@ -2,10 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Getting Started</title>
-    <script src="https://unpkg.com/lodash@4.17.20"></script>
+    <title>MGX Demo Apps</title>
   </head>
   <body>
-    <script src="bundle.js"></script>
+    <h1>MGX Demo Applications</h1>
+    <ul>
+      <li><a href="./engine1Demo.html">engine1</a></li>
+      <li><a href="./bicubicDemo.html">bicubic interpolation</a></li>
+    </ul>
   </body>
 </html>
