--- a/particle-flow/dev/index.html
+++ b/particle-flow/dev/index.html
@@ -9,7 +9,7 @@
         #canvas {
             width: 100%;
             height: 100%;
-            background-color: aliceblue;
+            background-color:blue;
         }
     </style>
 </head>
