--- a/ol-tools/dev/index.html
+++ b/ol-tools/dev/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ol-tools</title>
     <style>
-        #canvas {
+        #mapContainer {
             width: 100%;
-            height: 100%;
+            height: 600px;
             background-color: aliceblue;
         }
     </style>
 </head>
 <body>
-    <canvas id="canvas"></canvas>
+    <div id="mapContainer"></div>
 </body>
 <script src="./bundle.js"></script>
 </html>
