--- a/ol-tools/dev/index.html
+++ b/ol-tools/dev/index.html
@@ -9,7 +9,7 @@
         #mapContainer {
             width: 100%;
             height: 600px;
-            background-color: aliceblue;
+            background-color:darkblue;
         }
     </style>
 </head>
