--- a/swe/dev/index.html
+++ b/swe/dev/index.html
@@ -7,8 +7,8 @@
     <title>Inverse distance</title>
     <style>
         #canvas {
-            width: 100%;
-            height: 100%;
+            width: 50%;
+            height: 400px;
             background-color: aliceblue;
         }
     </style>
