wrote swe's a little more clearly

--- a/swe/dev/index.html
+++ b/swe/dev/index.html
@@ -7,16 +7,16 @@
     <title>Inverse distance</title>
     <style>
         #canvas {
-            width: 50%;
-            height: 400px;
+            width: 256px;
+            height: 256px;
             background-color: aliceblue;
         }
     </style>
 </head>
 <body>
-    <canvas id="canvas"></canvas>
     <img src="./HImage.png" alt="" id="HImage">
     <img src="./huvImage.png" alt="" id="huvImage">
+    <canvas id="canvas"></canvas>
 </body>
 <script src="bundle.js"></script>
 </html>
