--- a/swe/dev/index.html
+++ b/swe/dev/index.html
@@ -11,12 +11,19 @@
             height: 256px;
             background-color: aliceblue;
         }
+        #threejs_canvas {
+            width: 256px;
+            height: 256px;
+            background-color: aliceblue;
+        }
     </style>
 </head>
 <body>
     <img src="./HImage.png" alt="" id="HImage">
     <img src="./huvImage.png" alt="" id="huvImage">
     <canvas id="canvas"></canvas>
+    <canvas id="threejs_canvas"></canvas>
+
 </body>
 <script src="bundle.js"></script>
 </html>
