--- a/swe/dev/index.html
+++ b/swe/dev/index.html
@@ -19,8 +19,8 @@
     </style>
 </head>
 <body>
-    <img src="./HImage.png" alt="" id="HImage">
-    <img src="./huvImage.png" alt="" id="huvImage">
+    <img src="./HImage2.png" alt="" id="HImage">
+    <img src="./huvImage3.png" alt="" id="huvImage">
     <canvas id="canvas"></canvas>
     <canvas id="threejs_canvas"></canvas>
 
