--- a/swe/dev/index.html
+++ b/swe/dev/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <img src="./HImage2.png" alt="" id="HImage">
-    <img src="./huvImage3.png" alt="" id="huvImage">
+    <img src="./huvImage.png" alt="" id="huvImage">
     <canvas id="canvas"></canvas>
     <canvas id="threejs_canvas"></canvas>
 
