--- a/engine1/dev/index.html
+++ b/engine1/dev/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
     <style>
         #canvas {
-            width: 100%;
-            height: 600px;
+            width: 256px;
+            height: 256px;
             background-color: black;
         }
     </style>
