swe: prettier simulation

--- a/swe/dev/index.html
+++ b/swe/dev/index.html
@@ -12,18 +12,14 @@
             background-color: aliceblue;
         }
         #threejs_canvas {
-            width: 256px;
-            height: 256px;
+            width: 100%;
+            height: 50vh;
             background-color: aliceblue;
         }
     </style>
 </head>
 <body>
-    <img src="./HImage2.png" alt="" id="HImage">
-    <img src="./huvImage.png" alt="" id="huvImage">
-    <canvas id="canvas"></canvas>
     <canvas id="threejs_canvas"></canvas>
-
 </body>
 <script src="bundle.js"></script>
 </html>
