--- a/swe/dev/index.html
+++ b/swe/dev/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inverse distance</title>
+    <title>SWE</title>
     <style>
         #canvas {
             width: 256px;
@@ -13,7 +13,7 @@
         }
         #threejs_canvas {
             width: 100%;
-            height: 50vh;
+            height: 100vh;
             background-color: aliceblue;
         }
     </style>
