--- a/h3/client2/index.html
+++ b/h3/client2/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app"></div>
     <div id="popup"></div>
+    <div id="timeSlider">fdsafds</div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
