--- a/h3/client4/index.html
+++ b/h3/client4/index.html
@@ -9,6 +9,14 @@
   <body>
     <div id="app"></div>
     <div id="popup"></div>
+    <div id="control">
+      <div class="modeselect">
+        <input type="radio"> <p>mean</p>
+      </div>
+      <div class="modeselect">
+        <input type="radio"> <p>time</p>
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
