--- a/h3/client4/index.html
+++ b/h3/client4/index.html
@@ -13,7 +13,7 @@
 
       <div id="modeSelectMean" class="active">
         <div class="modeselect">
-          <input id="meanModeSelectInput" type="radio">
+          <input id="meanModeSelectInput" type="radio" checked="true">
           <p>mean</p>
         </div>
       </div>
