--- a/h3/client4/index.html
+++ b/h3/client4/index.html
@@ -24,9 +24,9 @@
           <p>time</p>
         </div>
         <div id="timeControl">
-          <div id="timeControlBack"><button> back </button></div>
+          <div id="timeControlBack" class="inactive"><button> back </button></div>
           <div id="timeControlCurrentTime"> time </div>
-          <div id="timeControlForward"><button> forward </button></div>
+          <div id="timeControlForward" class="active"><button> forward </button></div>
         </div>
       </div>
 
