--- a/h3/client4/index.html
+++ b/h3/client4/index.html
@@ -7,6 +7,7 @@
     <title>Vite + TS</title>
   </head>
   <body>
+    <!-- <div id="pop" style="width: 400px; height: 300px"></div> -->
     <div id="app"></div>
     <div id="popup"></div>
     <div id="control">
