--- a/thermal/client/index.html
+++ b/thermal/client/index.html
@@ -8,17 +8,22 @@
   </head>
   <body>
     <!-- <div id="pop" style="width: 400px; height: 300px"></div> -->
+
     <div id="app"></div>
+
+
     <div id="popup"></div>
+
+
     <div id="control">
 
-      <div id="modeSelectMean" class="active">
+      <div id="modeSelectMean" class="active controlElement">
         <div class="modeselect">
           <p>mean</p>
         </div>
       </div>
       
-      <div id="modeSelectTime" class="inactive">
+      <div id="modeSelectTime" class="inactive controlElement">
         <div class="modeselect">
           <p>time</p>
         </div>
@@ -29,7 +34,15 @@
         </div>
       </div>
 
+      <div id="statisticSelect" class="controlElement">
+        <div class="statisticsSelectItem active" id="statisticTemp">T_in [°C]</div>
+        <div class="statisticsSelectItem inactive" id="statisticTinMinTout">T_in - T_out [°C]</div>
+        <div class="statisticsSelectItem inactive" id="statisticTinMinToutNature">T_in - T_out_nature [°C]</div>
+      </div>
+
     </div>
+
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
